# ocr-stitch

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zyb/stitching/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/prasoon/panoramastitching/: PanoramaStitchingActivity.java
app/src/main/java/com/zyb/stitching/: NativePanorama.java  NativeStitching.java  PanoramaStitchingActivity.java  StartingActivity.java  StitchingActivity.java
app/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  com_prasoon_panoramastitching_NativePanorama.cpp  com_zyb_stitching_NativePanorama.cpp  com_zyb_stitching_NativePanorama.h  com_zyb_stitching_NativeStitching.cpp  com_zyb_stitching_NativeStitching.h
app/src/main/jni/lib/: CoImage.h  IVideoStitch.h  VideoStitch.h  imageStitch.h  stitchMgr.h  v4l2_client.h  v4l2cap.cpp  v4l2cap_img.cpp
app/src/main/jni/vcpp15/: ColorShake.h  MyArray.h  MyFile.h  MyHeadDef.h  MyImgSegment.h  MyLine.h  MyLineKB.h  MyMat.h  MyMatBin.h  MyMatColor.h  MyMatGray.h  MyMath.h  MyPoint.h  MyPointArray.h  MyProc.h  MyQTool.h  MyRect.h  MyString.h  MyTools.h  MyTools_cv.h  MyVideo.h
app/src/main/res/layout/: activity_main.xml  activity_starting.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/zyb/stitching/: ExampleUnitTest.java
